# neomirdata

./: .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml
.github/workflows/: ci.yml  formatting.yml  lint-python.yml
mirdata/: __init__.py  annotations.py  base.py  core.py  download_utils.py  models.py  validate.py  version.py
mirdata/datasets/: acousticbrainz_genre.py  baf.py  ballroom.py  beatles.py  beatport_key.py  billboard.py  brid.py  cante100.py  cipi.py  compmusic_carnatic_rhythm.py  compmusic_carnatic_varnam.py  compmusic_hindustani_rhythm.py  compmusic_indian_tonic.py  compmusic_jingju_acappella.py  compmusic_otmm_makam.py  compmusic_raga.py  cuidado.py  da_tacos.py  dagstuhl_choirset.py  dali.py  egfxset.py  filosax.py  four_way_tabla.py  freesound_one_shot_percussive_sounds.py  giantsteps_key.py  giantsteps_tempo.py  good_sounds.py  groove_midi.py  gtzan_genre.py  guitarset.py  hainsworth.py  haydn_op20.py  idmt_smt_audio_effects.py  ikala.py  irmas.py  jtd.py  maestro.py  medley_solos_db.py  medleydb_melody.py  medleydb_pitch.py  (+18 more)
tests/: conftest.py  test_annotations.py  test_core.py  test_download_utils.py  test_full_dataset.py  test_io.py  test_loaders.py  test_utils.py
tests/datasets/: test_acousticbrainz_genre.py  test_baf.py  test_ballroom.py  test_beatles.py  test_beatport_key.py  test_billboard.py  test_brid.py  test_candombe.py  test_cante100.py  test_carnatic_rhythm.py  test_carnatic_varnam.py  test_cipi.py  test_compmusic_raga.py  test_cuidado.py  test_da_tacos.py  test_dagstuhl_choirset.py  test_dali.py  test_egfxset.py  test_filosax.py  test_four_way_tabla.py  test_freesound_one_shot.py  test_giantsteps_key.py  test_giantsteps_tempo.py  test_good_sounds.py  test_groove_midi.py  test_gtzan_genre.py  test_guitarset.py  test_hainsworth.py  test_haydn_op20.py  test_hindustani_rhythm.py  test_idmt_smt_audio_effects.py  test_ikala.py  test_indian_tonic.py  test_irmas.py  test_jingju_acappella.py  test_jtd.py  test_maestro.py  test_mdb_stem_synth.py  test_medley_solos_db.py  test_medleydb_melody.py  (+21 more)
tests/resources/mir_datasets/acousticbrainz_genre_download/: acousticbrainz_genre_index.json
tests/resources/mir_datasets/acousticbrainz_genre_download/__MACOSX/: ._acousticbrainz_genre_index.json
