[tool.poetry]
name = "neomirdata"
version = "0.1.0"
description = "Common loaders for MIR datasets."
authors = ["Igor Bogicevic <igor.bogicevic@gmail.com>"]
maintainers = ["Igor Bogicevic <igor.bogicevic@gmail.com>"]
readme = "README.md"
license = "BSD-3-Clause"
packages = [{include = "mirdata"}]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]

[tool.poetry.dependencies]
python = ">=3.12"
attrs = ">=23.1.0"
chardet = ">=5.0.0"
Deprecated = ">=1.2.14"
h5py = ">=3.7.0"
librosa = ">=0.10.1"
numpy = ">=1.21.6"
pandas = ">=1.3.5"
pretty_midi = ">=0.2.10"
pyyaml = ">=6.0"
openpyxl = ">=3.0.10"
requests = ">=2.31.0"
scipy = ">=1.7.3"
tqdm = ">=4.66.1"
smart_open = {extras = ["all"], version = ">=5.0.0"}

[tool.poetry.group.dev.dependencies]
pytest = ">=7.2.0"
pytest-pep8 = ">=1.0.6"
pytest-mock = ">=3.10.0"
pytest-localserver = ">=0.7.1"
pytest-xdist = ">=3.3.1"
testcontainers = ">=2.3"
future = ">=0.18.3"
black = ">=23.3.0"
flake8 = ">=5.0.4"
mypy = ">=0.982"
mir_eval = ">=0.7"
types-PyYAML = "*"
types-chardet = "*"
types-Deprecated = "*"

[tool.poetry.group.docs.dependencies]
numpydoc = "*"
recommonmark = "*"
sphinx = ">=3.4.0"
sphinxcontrib-napoleon = "*"
sphinx_rtd_theme = "*"
sphinx-togglebutton = "*"
sphinx-copybutton = "*"

[tool.poetry.group.optional.dependencies]
openpyxl = ">=3.0.10"
dali-dataset = ">=1.1"
music21 = ">=6.7.1"
smart-open = [
    {extras = ["gcs"], version = ">=5.0.0"},
    {extras = ["s3"], version = ">=5.0.0"},
    {extras = ["http"], version = ">=5.0.0"}
]

[tool.poetry.urls]
Homepage = "https://github.com/probablyrobot/neomirdata"
Documentation = "https://neomirdata.readthedocs.io/en/stable/"
Issues = "https://github.com/probablyrobot/neomirdata/issues"
Releases = "https://github.com/probablyrobot/neomirdata/releases"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-n auto -vv"

[tool.coverage.run]
source = ["mirdata"]
omit = ["tests/*"]

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
